# cfdtools

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: publish-develop.yml  publish-master.yml  python-package.yml
cfdtools/: __init__.py  _cli.py  api.py  data.py  plot.py
cfdtools/cgns/: __init__.py  cgns.py
cfdtools/gmsh/: __init__.py  _gmsh.py  reader.py
cfdtools/hdf5/: __init__.py  _hdf5.py
cfdtools/ic3/: __init__.py  _ic3.py  readRestartIC3.py  readerV2.py  readerV4.py  reader_legacy.py  writeRestartIC3.py  writerV2.py  writerV3.py  writerV4.py
cfdtools/meshbase/: __init__.py  _connectivity.py  _data.py  _elements.py  _geom.py  _mesh.py  simple.py
cfdtools/physics/: dicovar.py
cfdtools/probes/: data.py  plot.py
cfdtools/utils/: _dev.py  math.py  maths.py  polybase.py
cfdtools/vtk/: __init__.py  _vtk.py  _vtkList.py  writer.py
docs/: about.md  cfdtools-format.md  cli.md  examples.md  format-detection.md  ic3-format.md  ic3-v4-format.md  index.md  requirements.txt
docs/examples/: morph-sphere.ipynb  zconvolution.ipynb
docs/stylesheets/: extra.css
examples/: create_vtk.py  cube-perio.py  cube-vtk.py  ic3_morph.py  ic3perf.py  read_ic3.py  rw_gmsh.py  rw_ic3.py
tests/: conftest.py  test_0_api.py  test_0_cli.py  test_0_connectivity.py  test_0_elements.py  test_0_geom.py  test_0_h5.py  test_0_polybase.py  test_1_cgns.py  test_1_data.py  test_1_gmsh.py  test_1_hdf5.py  test_1_ic3.py  test_1_mesh.py  test_1_simple.py  test_1_vtk.py  test_2_cli.py  test_2_convert.py  test_2_data.py  test_2_mesh.py  test_gmsh.py  test_ic3.py  test_probes.py
tests/data/: Box3x3x2v2.ic3  Box3x3x2v3.ic3  README.md  box3d-v22.msh  box3d-v41.msh  cavity-degen-facebc.hdf  cavity-degen.hdf  cubemixed0000.vtu  cubemixed0001.vtu  cubemixed0002.vtu  cubemixed0003.vtu  cubemixed0004.vtu  cubemixed0005.vtu  cubemixed0006.vtu  cubemixed0007.vtu  cubemixed0008.vtu  cubemixed0009.vtu  multi.msh  nrg-o1hllc-vf-v3.ic3  nrg-tinycube-v2.ic3  restart-perio.ic3  test_2d.msh  test_2d_small.msh
