[tool.poetry]
name = "cfdtools"
version = "0.1.0"
description = "Tools for mesh and solution management in CFD"
authors = ["j.gressier <jeremie.gressier@isae-supaero.fr>"]
license = "MIT"
repository = "https://github.com/jgressier/cfdtools"
documentation = "https://cfdtools.readthedocs.io/en/latest/"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules" ]
exclude = [ "examples" ]

[tool.poetry.scripts]
cfdinfo = 'cfdtools._cli:info'
cfdwrite_ic3v2 = 'cfdtools._cli:write_ic3v2'
cfdwrite_ic3v3 = 'cfdtools._cli:write_ic3v3'

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.15"
#matplotlib = { version="^3.1", optional = true }
#aerokit = { version="1.0", optional = true }

[tool.poetry.dev-dependencies]
#matplotlib = "^3.1"
#aerokit = "^1.0"
pytest = "^6.0"
pytest-cov = "^2.11.1"
#mkdocs = "^1.1"
#mkdocs-material = "^6.2.5"
#mkdocs-jupyter = "^0.15"
#markdown-include = "^0.6.0"
#mkdocs-include-markdown-plugin = ""
#mkdocs-exclude = ""
#pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov -v"
testpaths = [
    "tests"
]
