[project]
name = "cfdtools"
version = "0.6.0"
description = "Tools for mesh and solution management in CFD"
authors = [{name="J. Gressier", email="jeremie.gressier@isae-supaero.fr"}]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules" ]
requires-python = ">=3.7"
dependencies = [
    "numpy >= 1.15",
    "scipy >= 1.6",
    "h5py >= 3.1", "pyvista >= 0.38" ]

[project.urls]
Homepage = "https://github.com/jgressier/cfdtools"
Documentation = "https://cfdtools.readthedocs.io/en/latest/"

[tool.setuptools.packages.find] # to help find cfdtools folder as a package
include = ["cfdtools*"]

[project.scripts]
cfdinfo = 'cfdtools._cli:cfdinfo'
cfdwritecube = 'cfdtools._cli:cfdwritecube'
ic3brief = 'cfdtools._cli:ic3brief'
ic3probe_plotline = 'cfdtools._cli:ic3probe_plotline'
cfdwrite_ic3v2 = 'cfdtools._cli:cfdwrite_ic3v2'
cfdwrite_ic3v3 = 'cfdtools._cli:cfdwrite_ic3v3'
cfdwrite_ic3 = 'cfdtools._cli:cfdwrite_ic3v3'
cfdwrite_vtk = 'cfdtools._cli:cfdwrite_vtk'
vtkbrief = 'cfdtools._cli:vtkbrief'
vtkpack = 'cfdtools._cli:vtkpack'

[project.optional-dependencies]
dev = [ 
    "pytest >= 6.0", 
    "pytest-cov >= 2.11.1",
    "pylint >= 2.6.0" ]
doc = [ 
    "mkdocs >= 1.1",
    "mkdocs-material >= 6.2.5", 
    "mkdocs-jupyter >= 0.15",
    "markdown-include >= 0.6.0",
    "mkdocs-include-markdown-plugin",
    "mkdocs-exclude" ]

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov -v"
testpaths = [
    "tests"
]

[tool.bumpver]
current_version = "v0.6.0"
version_pattern = "vMAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} to {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{pep440_version}"']
"cfdtools/__init__.py" = ['__version__ = "{pep440_version}"']

[tool.black]
line-length = 110
skip-string-normalization = true
